--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,26 +6,46 @@
   "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaFeatures": {
-      "parserOptions.ecmaVersion": true,
+      "experimentalObjectRestSpread": true,
       "jsx": true
     },
-    "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": [ "react" ],
+  "plugins": [
+    "react"
+  ],
   "rules": {
-    "indent": [ "error", 2 ],
-    "linebreak-style": [ "error", "windows" ],
-    "quotes": [ "error", "single" ],
-    "semi": [ "error", "always" ],
     "react/jsx-uses-vars": 2,
     "react/jsx-uses-react": 2,
     "react/jsx-no-duplicate-props": 2,
     "react/jsx-no-undef": 2,
     "react/no-multi-comp": 2,
-    "react/jsx-indent-props": [ "error", 2 ],
+    "react/jsx-indent-props": [
+      "error",
+      2
+    ],
     "react/jsx-pascal-case": 2,
     "react/prop-types": 2,
-    "react/jsx-indent": [ "error", 2 ]
+    "react/jsx-indent": [
+      "error",
+      2
+    ],
+    "react/jsx-key": 2,
+    "indent": [
+      "error",
+      2
+    ],
+    "linebreak-style": [
+      "error",
+      "windows"
+    ],
+    "quotes": [
+      "error",
+      "single"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ]
   }
 }
