--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^6.10.0",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "styled-jsx": "^3.2.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^5.3.0",
+    "eslint": "^4.13.1",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^2.29.0",
